scss/modal/insert-table-modal.scss
.btn-insert-table {
  background: var(--tertiary);
  color: var(--secondary);

  .d-icon {
    color: var(--secondary);
  }

  .discourse-no-touch & {
    &:hover {
      background-color: var(--tertiary-hover);
      color: var(--secondary);

      .d-icon {
        color: var(--secondary);
      }
    }
  }
}

.insert-table-modal-modal {
  display: flex;
  flex-direction: column;
  align-items: flex-start;

  .modal-inner-container {
    --modal-max-width: $reply-area-max-width;
    width: $reply-area-max-width;
  }

  .modal-body {
    padding: 0;
    margin: 0.5em;
  }

  .btn-edit-reason {
    background: none;
    .d-icon {
      color: var(--primary-high);
    }
  }

  .modal-footer {
    display: flex;
    align-items: center;
    justify-content: space-between;

    .secondary-actions .tippy-content {
      h4 {
        color: var(--primary);
      }
      li {
        margin-block: 0.25rem;
        color: var(--primary-high);
      }
    }
  }

  .jexcel_container {
    padding: 0.5em;
    min-width: 100%;
    .jexcel_content {
      min-width: 100%;
      table.jexcel {
        min-width: 100%;
      }
    }
  }
}

